# self-driving-car-2021

./: .gitignore
catkin_ws/src/309512074_hw3/: hw3.rviz
catkin_ws/src/309512074_hw3/309512074_hw3/: ekf_template.yaml
catkin_ws/src/309512074_hw3/robot_localization/launch/: navsat_transform_template.launch
catkin_ws/src/309512074_hw3/robot_localization/params/: ekf_template.yaml  ukf_template.yaml
catkin_ws/src/309512074_hw4/: hw4.rviz
catkin_ws/src/309512074_hw4/icp/: CMakeLists.txt  package.xml
catkin_ws/src/309512074_hw4/icp/launch/: icp.launch
catkin_ws/src/309512074_hw4/icp/src/: downsample.cpp  icp_localization.cpp  load_pcd.cpp
catkin_ws/src/final/: generate_submission.py
catkin_ws/src/final/argo_tracking/: CMakeLists.txt
catkin_ws/src/final/argo_tracking/launch/: viz_track_result.launch
catkin_ws/src/final/argo_tracking/src/: viz_track_result.cpp
catkin_ws/src/final/argoverse_cbgs_kf_tracker/: ab3dmot.py
catkin_ws/src/final/argoverse_simple_gmf_tracker/: README.md  ab3dmot.py  run_ab3dmot.py
catkin_ws/src/midterm/localization/: CMakeLists.txt  midterm.rviz  package.xml  task1_result.csv  task2_result.csv  task3_result.csv
catkin_ws/src/midterm/localization/launch/: task1.launch  task2.launch  task3.launch
catkin_ws/src/midterm/localization/map/nuscenes_maps/: submaps_config.json
catkin_ws/src/midterm/localization/src/: nuscenes_localization.cpp  nuscenes_localization_save.cpp  task1_localization.cpp
hw2/: hw2.cpp
